--- a/package.json
+++ b/package.json
@@ -16,10 +16,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
+    "@chainlink/contracts": "^1.4.0",
+    "@openzeppelin/contracts": "^4.9.0",
+    "circomlib": "^2.0.5",
+    "snarkjs": "^0.7.5"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.26.3"
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.0.0",
+    "chai": "^4.3.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.7.0",
+    "hardhat": "^2.26.3",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.7.21"
   }
 }
