🔄 refactor: Migrar a FlipCoinDualZK con circuitos ZK
- Renombrar FlipCoinZK.sol → FlipCoinDualZK.sol
- Añadir circuito Circom: flip_coin_dual_zk.circom
- Crear documentación: docs/dual-zk-flow.md
- Actualizar tests: FlipCoinZK.test.js → FlipCoinDualZK.test.js
- Eliminar contratos obsoletos: FlipCoinSimple.sol
- Limpiar scripts de despliegue obsoletos
- Actualizar dependencias en package.json
- Añadir archivo de símbolos: flip_coin_zk.sym

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy:localhost": "npx hardhat run scripts/deploy.js --network localhost",
     "node": "npx hardhat node",
     "start": "npx hardhat node --hostname 0.0.0.0",
-    "serve": "node serve-frontend.js"
+    "generate-verifier": "node scripts/generate-verifier.js",
+    "zk:full": "npm run generate-verifier && npm run compile && npm run test"
   },
   "keywords": [],
   "author": "",
